<resources>
    <string name="app_name">Passport</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">User</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="users_list">Users list</string>
    <string name="change_password">Change password</string>
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="log_in">Log in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="invalid_password">Login failed. Password is invalid. Attempts left: %1$d</string>
    <string name="invalid_username">Login failed. Invalid username</string>
    <string name="invalid_current_password">Invalid current password</string>
    <string name="passwords_not_match">Passwords not match</string>
    <string name="weak_password">Password does not meet security requirements (length from 8 to 50 characters)</string>
    <string name="limited_password">The password does not meet the requirements for your account (must contain
        lowercase, uppercase letters and an arithmetic operation sign)
    </string>
    <string name="password_changed">Password changed!</string>
    <string name="need_change_password">Need to change password!</string>
    <string name="change">Change</string>
    <string name="user_blocked">User blocked!</string>
    <string name="set_master_password">Set master password</string>
    <string name="enter_master_password">Enter master password</string>
    <string name="invalid_master_password">Invalid master password</string>
    <string name="add">Add user</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="quit">Quit from profile?</string>
    <string name="user">User</string>
    <string name="admin">Admin</string>
    <string name="welcome">Welcome, %1$s!</string>
    <string name="password_limit">Password limit</string>
    <string name="username_exists">Username exists</string>
    <string name="user_added">User added</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="admin_access">This feature is only available to the administrator</string>
    <string name="title_activity_encrypt">Encryption</string>
    <string name="title_activity_splash">Passport</string>
    <string name="title_activity_login">Authorization</string>
    <string name="title_activity_about">About application</string>
    <string name="development">Vasily M (IDB-15-14, variant 14)</string>
    <string name="version">Version: %1$s</string>
    <string name="view_on_github">View project repository on Github</string>
    <string name="title_activity_change_password">Change password</string>

</resources>
