<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_about"
        tools:context=".ui.activity.AboutActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

            <androidx.cardview.widget.CardView
                    android:id="@+id/aboutcard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardUseCompatPadding="true"
                    app:cardElevation="2dp"
                    app:cardBackgroundColor="#ffffff"
                    android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                    <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:contentDescription="@string/nav_header_desc"
                            android:layout_marginBottom="5dp"
                            app:srcCompat="@mipmap/ic_launcher" />

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:text="@string/app_name" />

                    <TextView
                            android:id="@+id/version"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:gravity="center" />

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:gravity="center"
                            android:text="@string/development" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:id="@+id/githubcard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardUseCompatPadding="true"
                    app:cardElevation="2dp"
                    app:cardBackgroundColor="#ffffff"
                    android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                    <ImageView
                            android:layout_marginTop="5dp"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginBottom="5dp"
                            app:srcCompat="@drawable/ic_github_black_24dp" />

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginBottom="5dp"
                            android:text="@string/view_on_github" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>